maint.tf
# create the resource resource
resource "azurerm_resource_group" "terraform-project" {
  name     = "${var.resource_group}"
  location = "${var.location}"
}

# create the virtual network
resource "azurerm_virtual_network" "vnet" {
  name                = "${var.virtual_network_name}"
  location            = "${azurerm_resource_group.tf_azure_guide.location}"
  address_space       = ["${var.address_space}"]
  resource_group_name = "${azurerm_resource_group.tf_azure_guide.name}"
}

# create the subnet for the virtual machines
resource "azurerm_subnet" "subnet" {
  name                 = "${var.prefix}subnet"
  virtual_network_name = "${azurerm_virtual_network.vnet.name}"
  resource_group_name  = "${azurerm_resource_group.tf_azure_guide.name}"
  address_prefix       = "${var.subnet_prefix}"
}

# build a CentOS 7.5 virtual machine

# security group to allow inbound access on port 80 (http) and 22 (ssh)
resource "azurerm_network_security_group" "terraform-project-sg" {
  name                = "${var.prefix}-sg"
  location            = "${var.location}"
  resource_group_name = "${azurerm_resource_group.tf_azure_guide.name}"

  security_rule {
    name                       = "HTTP"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "${var.source_network}"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "SSH"
    priority                   = 101
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "${var.source_network}"
    destination_address_prefix = "*"
  }
}

# network interface
resource "azurerm_network_interface" "tfp-nic" {
  name                      = "${var.prefix}tfp-nic"
  location                  = "${var.location}"
  resource_group_name       = "${azurerm_resource_group.tf_azure_guide.name}"
  network_security_group_id = "${azurerm_network_security_group.tf-guide-sg.id}"

  ip_configuration {
    name                          = "${var.prefix}ipconfig"
    subnet_id                     = "${azurerm_subnet.subnet.id}"
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = "${azurerm_public_ip.tf-guide-pip.id}"
  }
}

# provision the virtual machine
resource "azurerm_virtual_machine" "site" {
  name                = "${var.hostname}-site"
  location            = "${var.location}"
  resource_group_name = "${azurerm_resource_group.tf_azure_guide.name}"
  vm_size             = "${var.vm_size}"

  network_interface_ids         = ["${azurerm_network_interface.tfp-nic.id}"]
  delete_os_disk_on_termination = "true"


  storage_image_reference {
    publisher = "${var.image_publisher}"
    offer     = "${var.image_offer}"
    sku       = "${var.image_sku}"
    version   = "${var.image_version}"
  }

  storage_os_disk {
    name              = "${var.hostname}-osdisk"
    managed_disk_type = "Standard_LRS"
    caching           = "ReadWrite"
    create_option     = "FromImage"
  }

  os_profile {
    computer_name  = "${var.hostname}"
    admin_username = "${var.admin_username}"
    admin_password = "${var.admin_password}"
  }

  os_profile_linux_config {
    disable_password_authentication = false
  }

  # transfer file for website provisioning.
    provisioner "file" {
      source      = "files/setup.sh"
      destination = "/home/${var.admin_username}/setup.sh"

      connection {
        type     = "ssh"
        user     = "${var.admin_username}"
        password = "${var.admin_password}"
        host     = "${azurerm_public_ip.tfp-pip.fqdn}"
      }
    }

    # This shell script starts our Apache server and prepares the demo environment.
    provisioner "remote-exec" {
      inline = [
        "chmod +x /home/${var.admin_username}/setup.sh",
        "sudo /home/${var.admin_username}/setup.sh",
      ]

      connection {
        type     = "ssh"
        user     = "${var.admin_username}"
        password = "${var.admin_password}"
        host     = "${azurerm_public_ip.tf-guide-pip.fqdn}"
      }
    }
  }
